--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h1{
     margin-top:5vw;
     min-height:65vh;
     border:3vw solid white;
-    background-image: linear-gradient(to bottom right,#540b0e, #f25c54) !important; 
+    background-image: linear-gradient(to bottom,#540b0e, #f25c54) !important; 
 }
 
 .underline{
@@ -91,14 +91,13 @@ h1{
 .about_divider{
     font-family: 'Spectral';
     margin-top:5vw;
-
-  
 }
 
 .project_intro{
     width:70%;
     text-align: justify;
     margin:auto !important;
+    font-size:1.2vw;
     
 }
 
@@ -109,6 +108,7 @@ h1{
     width:70%;
     text-align: justify;
     margin:auto !important;
+    font-size:1.2vw;
 
 }
 
@@ -116,6 +116,7 @@ h1{
     width:70%;
     text-align: justify;
     margin:auto !important;
+    font-size:1.2vw;
 }
 
 .interface_image_col{
@@ -150,6 +151,7 @@ h1{
     text-align:justify !important;
 
     border:9px solid  #ff3c38 !important;
+    font-size:1.2vw;
 }
 
 /* observations */
@@ -164,7 +166,8 @@ h1{
 
     text-align: justify;
 
-    margin:auto !important 
+    margin:auto !important ;
+    font-size:1.2vw;
     
 }
 
@@ -180,7 +183,8 @@ h1{
 
     text-align: justify;
 
-    margin:auto !important 
+    margin:auto !important;
+    font-size:1.2vw; 
 }
 /* answers */
 
@@ -195,7 +199,8 @@ h1{
 
     text-align: justify;
 
-    margin:auto !important 
+    margin:auto !important ;
+    font-size:1.2vw;
 }
 /* empathy mapps */
 
